fix: lava letter spacing

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -54,11 +54,35 @@
     h1 {
       font-size: clamp(100px, 22vw, 200px);
       line-height: 0.9;
-    }
 
-    // span {
-    //   display: block;
-    // }
+      .word:nth-child(odd) {
+        &:nth-child(3) {
+
+          span:nth-child(2) {
+            margin-left: .5vw;
+            // background-color: red;
+            @media (max-width: 780px) {
+              margin-left: 1.5vw;
+            }
+            @media (max-width: 480px) {
+              margin-left: 1.5vw;
+            }
+          }
+          span:nth-child(3) {
+            margin-left: -1vw;
+            // background-color: yellow;
+          }
+          span:nth-child(4) {
+            margin-left: -1vw;
+            // background-color: green;
+          }
+          span:nth-child(5) {
+            margin-left: -1vw;
+            // background-color: brown;
+          }
+        }
+      }
+    }
   }
 
   // --> Orange text on hero
